# slope

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  constants.py  logging_config.py  main.py  tasks.py
backend/app/api/: github_webhook.py  health.py  runs.py
backend/app/middleware/: request_context.py
backend/app/pipeline/: assigned_issue_core.py  pipeline_state.py  railtracks_flow.py  webhook_jobs.py
backend/app/schemas/: __init__.py  augment.py  github_webhook.py  ingestion.py  llm_outputs.py  memory.py  onboarding_run.py
backend/app/services/: augment_relevance.py  github_api.py  github_signature.py  onboarding_llm.py  openrouter_client.py  repo_clone.py  repo_ingestion.py  runs_store.py  team_memory.py
backend/data/: .gitignore
backend/fixtures/: github_issue_assigned.example.json
backend/tests/: conftest.py  test_augment_relevance.py  test_augment_schema.py  test_github_api.py  test_github_signature.py  test_github_webhook.py  test_onboarding_llm.py  test_openrouter_client.py  test_railtracks_settings.py  test_repo_clone.py  test_repo_ingestion.py  test_runs_api.py  test_runs_store.py  test_team_memory.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: not-found.tsx  page.tsx
frontend/components/: MarkdownBody.tsx  MermaidChart.tsx  TopoBackground.tsx
frontend/lib/: api.ts  githubUrls.ts  mermaidGithubClicks.ts  mermaidNormalize.ts  types.ts
