[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auggie-sdk>=0.1.12",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "openrouter>=0.8.0",
    "pydantic-settings>=2.13.1",
    "railtracks[cli]>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
